Update LoginController.java
changed from GET to POST and had to tweak the json creation